--- a/qualitas-parent/pom.xml
+++ b/qualitas-parent/pom.xml
@@ -378,6 +378,13 @@
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
+				<groupId>org.apache.camel</groupId>
+				<artifactId>camel-juel</artifactId>
+				<version>${camel.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
 				<version>${slf4j.version}</version>
@@ -488,6 +495,7 @@
 		<project.build.sourceVersion>1.6</project.build.sourceVersion>
 		<project.build.targetVersion>1.6</project.build.targetVersion>
 		<maven-compiler-plugin.version>2.0.2</maven-compiler-plugin.version>
+		<cobertura-maven-plugin.version>2.5.1</cobertura-maven-plugin.version>
 		<jaxb.version>2.1.13</jaxb.version>
 		<jaxb2-maven-plugin.version>1.3</jaxb2-maven-plugin.version>
 		<junit.version>4.8.2</junit.version>
@@ -497,7 +505,7 @@
 		<ode-axis2.version>1.3.5</ode-axis2.version>
 		<failsafe-maven-plugin.version>2.4.3-alpha-1</failsafe-maven-plugin.version>
 		<commons-exec.version>1.0.1</commons-exec.version>
-		<maven-checkstyle-plugin.version>2.8</maven-checkstyle-plugin.version>
+		<maven-checkstyle-plugin.version>2.9</maven-checkstyle-plugin.version>
 		<xalan.version>2.7.1</xalan.version>
 		<slf4j.version>1.6.1</slf4j.version>
 		<log4j.version>1.2.16</log4j.version>
@@ -513,37 +521,55 @@
 		<axis2.version>1.6.1</axis2.version>
 	</properties>
 
+	<profiles>
+		<profile>
+			<id>fastinstall</id>
+			<properties>
+				<maven.test.skip>true</maven.test.skip>
+				<jetty.skip>true</jetty.skip>
+			</properties>
+		</profile>
+		<profile>
+			<id>sourcecheck</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-checkstyle-plugin</artifactId>
+					</plugin>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>cobertura-maven-plugin</artifactId>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${maven-compiler-plugin.version}</version>
-				<configuration>
-					<source>${project.build.sourceVersion}</source>
-					<target>${project.build.targetVersion}</target>
-					<encoding>${project.build.sourceEncoding}</encoding>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>${maven-checkstyle-plugin.version}</version>
-				<dependencies>
-					<dependency>
-						<groupId>com.google.code.qualitas</groupId>
-						<artifactId>qualitas-buildtools</artifactId>
-						<version>${project.version}</version>
-					</dependency>
-				</dependencies>
-			</plugin>
-		</plugins>
 		<pluginManagement>
 			<plugins>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>${maven-compiler-plugin.version}</version>
+					<configuration>
+						<source>${project.build.sourceVersion}</source>
+						<target>${project.build.targetVersion}</target>
+						<encoding>${project.build.sourceEncoding}</encoding>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-checkstyle-plugin</artifactId>
 					<version>${maven-checkstyle-plugin.version}</version>
+					<dependencies>
+						<dependency>
+							<groupId>com.google.code.qualitas</groupId>
+							<artifactId>qualitas-buildtools</artifactId>
+							<version>${project.version}</version>
+						</dependency>
+					</dependencies>
 					<executions>
 						<execution>
 							<id>validate</id>
@@ -552,11 +578,31 @@
 								<configLocation>qualitas-checkstyle.xml</configLocation>
 								<consoleOutput>true</consoleOutput>
 								<failsOnError>true</failsOnError>
-								<suppressionsLocation>qualitas-checkstyle-suppressions.xml</suppressionsLocation>
+								<suppressionsLocation>qualitas-checkstyle-suppressions.xml
+								</suppressionsLocation>
 								<encoding>${project.build.sourceEncoding}</encoding>
 							</configuration>
 							<goals>
 								<goal>checkstyle</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>cobertura-maven-plugin</artifactId>
+					<version>${cobertura-maven-plugin.version}</version>
+					<configuration>
+						<formats>
+							<format>html</format>
+						</formats>
+					</configuration>
+					<executions>
+						<execution>
+							<id>instrument</id>
+							<phase>validate</phase>
+							<goals>
+								<goal>cobertura</goal>
 							</goals>
 						</execution>
 					</executions>
@@ -590,17 +636,12 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>2.8</version>
+				<version>${maven-checkstyle-plugin.version}</version>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>2.4</version>
-				<configuration>
-					<formats>
-						<format>html</format>
-					</formats>
-				</configuration>
+				<version>${cobertura-maven-plugin.version}</version>
 			</plugin>
 		</plugins>
 	</reporting>
