--- a/qualitas-parent/pom.xml
+++ b/qualitas-parent/pom.xml
@@ -15,6 +15,99 @@
 
 	<name>qualitas-parent</name>
 
+	<profiles>
+		<profile>
+			<id>windows</id>
+			<activation>
+				<os>
+					<family>windows</family>
+				</os>
+			</activation>
+			<properties>
+				<qualitas.os>windows</qualitas.os>
+			</properties>
+		</profile>
+		<profile>
+			<id>linux</id>
+			<activation>
+				<os>
+					<family>linux</family>
+				</os>
+			</activation>
+			<properties>
+				<qualitas.os>linux</qualitas.os>
+			</properties>
+		</profile>
+		<profile>
+			<id>production</id>
+			<properties>
+				<qualitas.env>production</qualitas.env>
+			</properties>
+		</profile>
+		<profile>
+			<id>development</id>
+			<properties>
+				<qualitas.env>development</qualitas.env>
+			</properties>
+		</profile>
+		<profile>
+			<id>fastinstall</id>
+			<properties>
+				<maven.test.skip>true</maven.test.skip>
+				<jetty.skip>true</jetty.skip>
+			</properties>
+		</profile>
+		<profile>
+			<id>sourcecheck</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-checkstyle-plugin</artifactId>
+					</plugin>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>cobertura-maven-plugin</artifactId>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
+	<properties>
+		<!-- overriden by profiles -->
+		<qualitas.env>development</qualitas.env>
+		<qualitas.os>linux</qualitas.os>
+		<project.build.sourceVersion>1.6</project.build.sourceVersion>
+		<project.build.targetVersion>1.6</project.build.targetVersion>
+		<maven-compiler-plugin.version>2.0.2</maven-compiler-plugin.version>
+		<cobertura-maven-plugin.version>2.5.1</cobertura-maven-plugin.version>
+		<jaxb.version>2.1.13</jaxb.version>
+		<jaxb2-maven-plugin.version>1.3</jaxb2-maven-plugin.version>
+		<junit.version>4.8.2</junit.version>
+		<mockito.version>1.8.5</mockito.version>
+		<commons-logging.version>1.1</commons-logging.version>
+		<commons-io.version>1.4</commons-io.version>
+		<ode-axis2.version>1.3.5</ode-axis2.version>
+		<failsafe-maven-plugin.version>2.4.3-alpha-1</failsafe-maven-plugin.version>
+		<commons-exec.version>1.0.1</commons-exec.version>
+		<maven-checkstyle-plugin.version>2.9</maven-checkstyle-plugin.version>
+		<xalan.version>2.7.1</xalan.version>
+		<slf4j.version>1.6.1</slf4j.version>
+		<log4j.version>1.2.16</log4j.version>
+		<commons-fileupload.version>1.2.2</commons-fileupload.version>
+		<jetty-maven-plugin.version>7.6.0.v20120127</jetty-maven-plugin.version>
+		<spring.version>3.0.6.RELEASE</spring.version>
+		<camel.version>2.9.0</camel.version>
+		<spring-rabbit.version>1.0.0.RELEASE</spring-rabbit.version>
+		<cglib.version>2.2.2</cglib.version>
+		<servlet-api.version>2.5</servlet-api.version>
+		<jstl.version>1.2</jstl.version>
+		<axiom.version>1.2.12</axiom.version>
+		<axis2.version>1.6.1</axis2.version>
+		<cxf.version>2.5.1</cxf.version>
+	</properties>
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -158,6 +251,20 @@
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
+				<groupId>com.google.code.qualitas.internal.bpel</groupId>
+				<artifactId>qualitas-internal-bpel-instrumentation</artifactId>
+				<version>0.0.4-SNAPSHOT</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.google.code.qualitas.internal.bpel</groupId>
+				<artifactId>qualitas-internal-bpel-spring</artifactId>
+				<version>0.0.4-SNAPSHOT</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
 				<groupId>com.google.code.qualitas.webapp</groupId>
 				<artifactId>qualitas-webapp</artifactId>
 				<version>${project.version}</version>
@@ -167,6 +274,13 @@
 			<dependency>
 				<groupId>com.google.code.qualitas.utils</groupId>
 				<artifactId>qualitas-utils-zip</artifactId>
+				<version>${project.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>com.google.code.qualitas.utils</groupId>
+				<artifactId>qualitas-utils-dom</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
@@ -379,8 +493,15 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.camel</groupId>
-				<artifactId>camel-juel</artifactId>
+				<artifactId>camel-cxf</artifactId>
 				<version>${camel.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.cxf</groupId>
+				<artifactId>cxf-rt-transports-http-jetty</artifactId>
+				<version>${cxf.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
@@ -491,62 +612,23 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	<properties>
-		<project.build.sourceVersion>1.6</project.build.sourceVersion>
-		<project.build.targetVersion>1.6</project.build.targetVersion>
-		<maven-compiler-plugin.version>2.0.2</maven-compiler-plugin.version>
-		<cobertura-maven-plugin.version>2.5.1</cobertura-maven-plugin.version>
-		<jaxb.version>2.1.13</jaxb.version>
-		<jaxb2-maven-plugin.version>1.3</jaxb2-maven-plugin.version>
-		<junit.version>4.8.2</junit.version>
-		<mockito.version>1.8.5</mockito.version>
-		<commons-logging.version>1.1</commons-logging.version>
-		<commons-io.version>1.4</commons-io.version>
-		<ode-axis2.version>1.3.5</ode-axis2.version>
-		<failsafe-maven-plugin.version>2.4.3-alpha-1</failsafe-maven-plugin.version>
-		<commons-exec.version>1.0.1</commons-exec.version>
-		<maven-checkstyle-plugin.version>2.9</maven-checkstyle-plugin.version>
-		<xalan.version>2.7.1</xalan.version>
-		<slf4j.version>1.6.1</slf4j.version>
-		<log4j.version>1.2.16</log4j.version>
-		<commons-fileupload.version>1.2.2</commons-fileupload.version>
-		<jetty-maven-plugin.version>7.6.0.v20120127</jetty-maven-plugin.version>
-		<spring.version>3.0.6.RELEASE</spring.version>
-		<camel.version>2.9.0</camel.version>
-		<spring-rabbit.version>1.0.0.RELEASE</spring-rabbit.version>
-		<cglib.version>2.2.2</cglib.version>
-		<servlet-api.version>2.5</servlet-api.version>
-		<jstl.version>1.2</jstl.version>
-		<axiom.version>1.2.12</axiom.version>
-		<axis2.version>1.6.1</axis2.version>
-	</properties>
-
-	<profiles>
-		<profile>
-			<id>fastinstall</id>
-			<properties>
-				<maven.test.skip>true</maven.test.skip>
-				<jetty.skip>true</jetty.skip>
-			</properties>
-		</profile>
-		<profile>
-			<id>sourcecheck</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-checkstyle-plugin</artifactId>
-					</plugin>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>cobertura-maven-plugin</artifactId>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
+		<testResources>
+			<testResource>
+				<directory>src/test/resources</directory>
+				<filtering>true</filtering>
+			</testResource>
+		</testResources>
+		<filters>
+			<filter>../qualitas-parent/src/main/filters/filter-${qualitas.env}-${qualitas.os}.properties</filter>
+		</filters>
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -611,6 +693,11 @@
 					<groupId>org.apache.camel</groupId>
 					<artifactId>camel-maven-plugin</artifactId>
 					<version>${camel.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.cxf</groupId>
+					<artifactId>cxf-codegen-plugin</artifactId>
+					<version>${cxf.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.mortbay.jetty</groupId>
