--- a/qualitas-parent/pom.xml
+++ b/qualitas-parent/pom.xml
@@ -91,7 +91,7 @@
 		<ode-axis2.version>1.3.5</ode-axis2.version>
 		<failsafe-maven-plugin.version>2.4.3-alpha-1</failsafe-maven-plugin.version>
 		<commons-exec.version>1.0.1</commons-exec.version>
-		<maven-checkstyle-plugin.version>2.9</maven-checkstyle-plugin.version>
+		<maven-checkstyle-plugin.version>2.9.1</maven-checkstyle-plugin.version>
 		<xalan.version>2.7.1</xalan.version>
 		<slf4j.version>1.6.1</slf4j.version>
 		<log4j.version>1.2.16</log4j.version>
@@ -106,6 +106,8 @@
 		<axiom.version>1.2.12</axiom.version>
 		<axis2.version>1.6.1</axis2.version>
 		<cxf.version>2.5.1</cxf.version>
+		<lambdaj.version>2.3.1</lambdaj.version>
+		<commons-beanutils.version>1.8.2</commons-beanutils.version>
 	</properties>
 
 	<dependencyManagement>
@@ -610,6 +612,16 @@
 				<type>jar</type>
 				<scope>provided</scope>
 			</dependency>
+			<dependency>
+				<groupId>com.googlecode.lambdaj</groupId>
+				<artifactId>lambdaj</artifactId>
+				<version>${lambdaj.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-beanutils</groupId>
+				<artifactId>commons-beanutils</artifactId>
+				<version>${commons-beanutils.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -659,7 +671,7 @@
 							<configuration>
 								<configLocation>qualitas-checkstyle.xml</configLocation>
 								<consoleOutput>true</consoleOutput>
-								<failsOnError>true</failsOnError>
+								<failsOnError>false</failsOnError>
 								<suppressionsLocation>qualitas-checkstyle-suppressions.xml
 								</suppressionsLocation>
 								<encoding>${project.build.sourceEncoding}</encoding>
