--- a/qualitas-parent/pom.xml
+++ b/qualitas-parent/pom.xml
@@ -81,6 +81,8 @@
 		<project.build.targetVersion>1.6</project.build.targetVersion>
 		<maven-compiler-plugin.version>2.0.2</maven-compiler-plugin.version>
 		<cobertura-maven-plugin.version>2.5.1</cobertura-maven-plugin.version>
+		<maven-processor-plugin.version>2.0.2</maven-processor-plugin.version>
+		<lifecycle-mapping.version>1.0.0</lifecycle-mapping.version>
 		<jaxb.version>2.1.13</jaxb.version>
 		<jaxb2-maven-plugin.version>1.3</jaxb2-maven-plugin.version>
 		<junit.version>4.8.2</junit.version>
@@ -107,6 +109,9 @@
 		<cxf.version>2.5.1</cxf.version>
 		<lambdaj.version>2.3.1</lambdaj.version>
 		<commons-beanutils.version>1.8.2</commons-beanutils.version>
+		<javax.persistence.version>2.0.2</javax.persistence.version>
+		<eclipselink.version>2.3.2</eclipselink.version>
+		<hsqldb.version>2.2.8</hsqldb.version>
 	</properties>
 
 	<dependencyManagement>
@@ -625,19 +630,19 @@
 				<groupId>org.eclipse.persistence</groupId>
 				<artifactId>eclipselink</artifactId>
 				<scope>compile</scope>
-				<version>2.3.2</version>
+				<version>${eclipselink.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.eclipse.persistence</groupId>
 				<artifactId>javax.persistence</artifactId>
 				<scope>compile</scope>
-				<version>2.0.2</version>
+				<version>${javax.persistence.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hsqldb</groupId>
 				<artifactId>hsqldb</artifactId>
 				<scope>test</scope>
-				<version>2.2.8</version>
+				<version>${hsqldb.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -741,6 +746,39 @@
 							</systemProperty>
 						</systemProperties>
 						<scanIntervalSeconds>10</scanIntervalSeconds>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.bsc.maven</groupId>
+					<artifactId>maven-processor-plugin</artifactId>
+					<version>2.0.2</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>${lifecycle-mapping.version}</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.bsc.maven</groupId>
+										<artifactId>
+											maven-processor-plugin
+										</artifactId>
+										<versionRange>
+											[2.0.2,)
+										</versionRange>
+										<goals>
+											<goal>process</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
 					</configuration>
 				</plugin>
 			</plugins>
